** KPILOT CHANGELOG **
======================

2004-10-07  Adriaan de Groot
* Started adding encoding support to PalmDOC conduit dialogs. Not
  sure how to proceed there.

2004-10-05  Adriaan de Groot
* I wonder if the codec() stuff shouldn't move from the PilotAppCategory
  to the device link -- after all, it's the _device_ that knows what
  the encoding is (who knows, maybe future versions of Pilots will be
  able to tell th desktop this).
* Added a localBackup action, so we can make ~ backup files of all the
  database files before doing a sync, just in case.
* Merged lots of bugs.
* Found out that KPilot uses title instead of prefix for the honorific
  titles in the addressbook - this means KPilot and KAddressbook got
  out of sync. Fixed.
* New questionYesNoCancel() didn't return correct button codes.
* Checked all the codec stuff, added some in relevant places but can't
  spot any addressbook fields that are not synced.

2004-10-04  Adriaan de Groot
* Bail if the Pilot disconnects, but only between conduits. Conduits
  themselves should still check for disconnect.
* Bug maintainence turned up a useful patch for category support
  in the calendar.

2004-10-01  Adriaan de Groot
* Merged nice patch from Adrian S for HotPlug.
* Moved tickle stuff into a separate thread, so that it doesn't
  require a Qt event loop to keep the Pilot awake.
* Added tickles in the right (?) places in the abbrowser - around
  the loading part.
* Discovered that UserCheck used KMessageBox::question*() instead of
  a version with timeouts. Fixed that by adding a qYNCancel() to
  InteractiveSync, and updated both qYN*() methods there to use
  KDE 3.3 KMessageBox support.
* Merged InteractiveAction with SyncAction, cleaning up the inheritance
  tree and making it possible to conduits to use the question* methods.

2004-09-26  Adriaan de Groot
* Put up new tarballs on kpilot.org.
* Patched up the KNotes conduit a little - notes listed as modified