@@ -61,14 +61,13 @@ void DBFlagsEditor::slotOk()
 {
 	if (KMessageBox::questionYesNo(this, i18n("Changing the database flags might corrupt the whole database, or make the data unusable. Do not change the values unless you are absolutely sure you know what you are doing.\n\nReally assign these new flags?"), i18n("Changing Database Flags"))==KMessageBox::Yes)
 	{
-		strncpy(dbi->name, widget->fDBName->text().latin1(), 33);
-		dbi->name[33]='\0';
+		strlcpy(dbi->name, widget->fDBName->text().latin1(), 33);
 
 		char buff[5];
-		strncpy(buff, widget->fType->text().latin1(), 4);
+		strlcpy(buff, widget->fType->text().latin1(), 5);
 		dbi->type=get_long(buff);
 
-		strncpy(buff, widget->fCreator->text().latin1(), 4);
+		strlcpy(buff, widget->fCreator->text().latin1(), 5);
 		dbi->creator=get_long(buff);
 
 
