@@ -309,12 +309,7 @@ RestoreAction::RestoreAction(KPilotDeviceLink * p, QWidget * visible ) :
 			<< ": Adding " << s << " to restore list." << endl;
 #endif
 
-#if !KDE_IS_VERSION(3,0,6)  /* 3.0.5 ok? */
-		strncpy(dbi.name, QFile::encodeName(dirname + s), sizeof(dbi.name) - 1);
-		dbi.name[(sizeof(dbi.name) - 1)] = '\0';
-#else
 		strlcpy(dbi.name, QFile::encodeName(dirname + s), sizeof(dbi.name));
-#endif
 
 		f = pi_file_open(dbi.name);
 		if (!f)
